--- a/src/OpenSage.FFmpeg.Tests/OpenSage.FFmpeg.Tests.csproj
+++ b/src/OpenSage.FFmpeg.Tests/OpenSage.FFmpeg.Tests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OpenSage.FFmpeg\OpenSage.FFmpeg.csproj" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
@@ -22,8 +23,10 @@
     </None>
     <None Include="..\..\deps\ffmpeg\win-x64\libwinpthread-1.dll" Link="libwinpthread-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>   
+    <None Update="test.vp6">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <ProjectReference Include="..\OpenSage.FFmpeg\OpenSage.FFmpeg.csproj" />
   </ItemGroup>
 
 </Project>
