--- a/src/OpenSage.FFmpeg.Tests/OpenSage.FFmpeg.Tests.csproj
+++ b/src/OpenSage.FFmpeg.Tests/OpenSage.FFmpeg.Tests.csproj
@@ -27,6 +27,9 @@
     <None Update="test.vp6">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="test.bik">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
