Clone submodules for appveyor and perform dotnet restore

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,7 +3,9 @@ image: Visual Studio 2017
 configuration: Release
 install:
 - ps: >-
+    git submodule update --init --recursive
     cd src
+    dotnet restore
 
 build:
   project: src/OpenSage.FFmpeg.sln
